# meshforge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/commands/: apply-pr-feedback.md  codex-loop.md  codex-review.md
.codex/: AGENTS.md  config.toml
.codex/agents/: explorer.toml  reviewer.toml
.devcontainer/: devcontainer.json
docs/: building-schema.md  development-plan.md  progress.md
docs/screenshots/: README.md
python/: heightmap_to_stl.py  make_sample.py
python/meshforge/: __init__.py  __main__.py  cli.py  heightmap.py  mesh.py  stl.py  ui_streamlit.py
python/meshforge/building/: __init__.py  assemble.py  extract.py
samples/: building_minimal.json  building_with_door.json  building_with_floor.json  building_with_furniture.json  building_with_gable_roof.json  building_with_hip_roof.json  building_with_pyramidal_roof.json  building_with_roof.json  multilayer.json
scripts/: codex-review.sh
